Finished my first website from zero using flexbox.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        Header logo
+        Cool Header
         <div class="links">
             <ul>
                 <li>
@@ -26,42 +26,49 @@
     <div class="c">
         <div class="c1">
             <div class="c1l">
-            <h1>This website is awesome</h1>
+            <h1>Let's know a few super-cars?</h1>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button class="b1">Sign up</button>
             </div>
             <div class="c1r">
-            <img src="../images/file.jpeg" alt="name">
+            <img src="./images/corvette.jpeg" alt="car">
             </div>
         </div>
         <div class="c2">
-            <h2>Some random information.</h2>
-            <div class="imgs"></div>
+            <h2>Some super-cars</h2>
+            <div class="imgs">
                 <div class="img1">
-                    <img src="./images/file.png" alt="name">
-                    <div class="text">this is something.</div>
+                    <img src="./images/lambo.jpeg" alt="car">
+                    <div class="text">this is a Lambo.</div>
                 </div>    
                 <div class="img2">
-                    <img src="./images/file.png" alt="name">
-                    <div class="text">this is something.</div>
+                    <img src="./images/ferrari.jpeg" alt="name">
+                    <div class="text">this is a Ferrari.</div>
                 </div>    
                 <div class="img3">
-                    <img src="./images/file.png" alt="name">
-                    <div class="text">this is something.</div>
+                    <img src="./images/koenigsegg.jpeg" alt="name">
+                    <div class="text">this is a Koenigsegg.</div>
                 </div> 
                 <div class="img4">
-                    <img src="./images/file.png" alt="name">
-                    <div class="text">this is something.</div>    
+                    <img src="./images/pagani.jpeg" alt="name">
+                    <div class="text">this is a Pagani.</div>    
                 </div>
+            </div>
         </div>  
         <div class="c3">
-            <p>This is a inspiring quote, or a testimonial from a customer. Maybe it's just filling up space.</p>
-            <p class="author">-Thor, God of Thunder</p>
+            <div class="c3s">
+                <p class="qtext">This is a inspiring quote, or a testimonial from a customer. Maybe it's just filling up space.</p>
+                <p class="author">-Thor, God of Thunder</p>
+            </div>
         </div>
         <div class="c4">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <button class="b2">Sign up</button>
+            <div class="container">
+                <div class="c4l">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button class="b2">Sign up</button>
+            </div>
         </div>
     </div>
     <div class="footer">Copyright ® The Odin Project 2021</div>
